Blog articles description + render about/post templates

--- a/content/blog/2020_activity_spreadsheet/index.mdx
+++ b/content/blog/2020_activity_spreadsheet/index.mdx
@@ -1,13 +1,13 @@
 ---
-title: "2020 activity spreadsheet review and 2021 proposals"
+title: "Review and proposals for my time management planner"
 slug: 5feb11fd7d0c7c0ba5620f4b
-type: blog
+type: "blog"
 date: "2021-01-05"
 author: Lorenzo Bernaschina
-description: test
+description: How I am using a simple spreadsheet to plan, monitor, and evaluate my work and life.
 banner: ./banner.jpg
 ---
-As a person interested in AI and data science, I decided to record every single hour of my 2020 in a spreadsheet to create a sort of “personal life dataset” to play with. I see many companies spending a lot of money, time, and energy to set up dashboards and data analysis tools to monitor their businesses. I thought about doing the same to myself to see if it produced any benefit. Here are my final considerations for this first year and my proposals for the next one.
+As a person interested in AI and data science, I decided to record every single hour of my 2020 in a spreadsheet to create a sort of “personal life dataset” to play with. I see many companies spending a lot of money, time, and energy to set up dashboards and data analysis tools to monitor their businesses. I thought about doing the same to myself to see if it produced any benefit. Here are my final considerations on last year and my proposals for 2021.
 
 ## 2020 spreadsheet setup
 I have divided my activities into the following 8 categories and assigned to each of them a color:
