--- a/content/blog/2020_annual_review/index.mdx
+++ b/content/blog/2020_annual_review/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: "2020 year in review: The underrated power of the Internet"
 slug: 5fea17087d0c7c0ba5620f4a
-type: blog
+type: "blog"
 date: "2021-01-01"
 author: Lorenzo Bernaschina
-description: test
+description: My takeaways from a year that already shaped the decade.
 banner: ./banner.jpg
 ---
 
