--- a/content/blog/quit_my_job/index.mdx
+++ b/content/blog/quit_my_job/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: "I quit my job to make a living doing what I love"
 slug: quit-my-job
-type: blog
-date: "2021-04-15"
+type: "blog"
+date: "2021-04-21"
 author: Lorenzo Bernaschina
-description: test
+description: Questions, answers, and plans behind the decision to invest in my dreams, at least for a while.
 banner: ./banner.jpg
 ---
 
@@ -12,49 +12,47 @@ I did it! I quit my job. It's definitely not the safest decision I could make in
 
 Many people are losing their jobs and I have left mine on purpose without guarantees. Frankly, sometimes I feel guilty about it. It was far from an easy choice. I thought about it carefully for months. Then I imagined myself in 20 years and concluded that **the biggest risk is living with regrets**. 
 
-In this article, I go through the questions that I have obsessively asked myself hundreds of times before making the choice. A year ago my answers would have been very different. I am quite sure they will be in a year too. Roads and plans can change moving towards my final destination: **make a living doing what I love**. I will know that I have arrived once I no longer feel that peak of excitement at the beginning of the weekends and the holidays alternating with a peak of frustration at the end.
+In this article, I go through the questions that I have obsessively asked myself hundreds of times before making the choice. A year ago my answers would have been very different. I am quite sure they will be in a year too. Roads and plans can change moving towards my final destination: **make a living doing what I love**. That is, no longer feeling that peak of excitement on Friday afternoon alternating with a peak of frustration on Sunday evening...
 
 ## Why now?
 In late 2020, I finished my Master's in machine learning & AI. I pursued it while working as a full-stack developer for a mid-sized company based in Milan. Both experiences have made me grow as a person and as a professional. Among the many commitments, I also found the time to travel and make new friends by visiting new cities and participating in conferences and hackathons.
 
-At some point, the world has been turned upside down. I found myself working and studying alone in my bedroom overnight. As the weeks went by, I have begun to realize that those **new habits imposed by the pandemic are laying the foundations for this decade**. The way people work and learn is slightly changing day by day.
+At some point, the world has been turned upside down. I found myself working and studying alone in my bedroom overnight. As the weeks went by, I have begun to realize that those **new habits imposed by the pandemic were setting the stage for this decade**. The way people work and learn is slightly changing day by day.
 
-A year later, we are in the midst of health, economic, psychological, and social crises. All at the same time. We will recover and start traveling and meeting again. But such **sudden and radical changes in people's lifestyles will make things unpredictably different**. We can escape fear or seize the opportunities that come with it. I chose the latter.
+A year later, we are in the midst of health, economic, psychological, and social crises. All at the same time. We will recover and start traveling and meeting again. But such **sudden and radical changes in people's lifestyles will make things unpredictably different**. We can live with the fears that come with it or seize the opportunities. I chose the latter.
 
 ## What is the opportunity?
-Every crisis causes a redistribution of value. The biggest opportunity I see is the **decentralization of expertise**. The knowledge economy is going to be very different in 10 years because of it. 
+Every crisis causes a redistribution of value. The biggest opportunity I see is the **global decentralization of expertise**. I think the knowledge economy will be very different in 10 years because of it. We are already seeing some early effects:
+- Companies and individuals now have easy access to an unconfined talent pool 
+- Vibrant online communities spring up every day on every topic generating meaningful connections
+- The last frontier of social networks are live discussions
 
-Workplaces and the workforce have begun to decentralize. As a student or worker, it means that it is no longer strictly necessary to be in certain places to get a meaningful advantage of any kind. As a university or company, it means that you have easy access to a global pool of talents. Some cities and regions will continue to be more representative of certain fields (e.g. Milan for design and fashion, Emilia-Romagna for motorsport, California for information technology). I lived in Milan for almost 6 years. I've been multiple times to the other two, met people, visited their universities and companies. Nothing will ever replace the value of experiencing and breathing the collective intelligence of a place in person. However, vibrant new online communities are springing up every day on every topic. I am part of some of them and they work very well.
-
-Experts are online now. They were previously too. But now, whether you are a company, a self-employed, a student, or just a curious person, **the world is coming to you like never before**. The pandemic has normalized and speeded up remote communications. Many people and organizations will probably stay concentrated in specific areas, but accessible from everywhere if you like. Otherwise, they will no longer be competitive.
+Because of this, there is a much greater availability of resources, events, and people willing to talk and collaborate online. Before the pandemic, such a diversity of thoughts and points of view in my conversations would only have been possible by traveling. Of course, nothing will ever replace the value of experiencing the collective intelligence of a place or event in person. But having the chance to interact closely with the whole world just by showing up in the right virtual places is huge. 
 
 ## What are the risks involved?
 There are internal and external risks. 
 
-**Internal risks are based on personal assumptions**. They are subjective, therefore potentially misleading. *Does the opportunity I see really exist? How to make the most of it? How sustainable is it in the long term?* It is my job to de-risk these kinds of hypotheses with regular testing and retrospectives. 
+**Internal risks are based on facts**. In my case, the pandemic forced me to go home and I stopped traveling. So my expenses are much lower than before. I just finished my formal studies and was not happy with what I was working on. I felt I didn't have much to lose but time. However, I know I am still missing some important skills to achieve my goal. 
 
-**External risks are based on facts**. In my case, the pandemic forced me to return to my home. Due to this and very limited travel, my expenses are much lower than before. I've just finished my formal studies. I gained some work experience in the office and remotely and saw the pros and cons of both. I am still missing some key mindsets and skills to achieve my goal of making a living doing what I love.
+**External risks are based on personal assumptions**, therefore they are potentially misleading. *Does the opportunity I see really exist? How to make the most of it? How sustainable is it in the long term?* I have no guarantee that the abundance and availability of global expertise will last. However, at least for the foreseeable future, the world will stay online. So far my experience has been very positive: I have made new friends that I am looking forward to meeting in person and have learned many new things.
 
-Balancing all these elements, I thought it was the right time to invest some time and savings into filling my knowledge gaps while working on projects that make me happy and meeting like-minded people online.
+Balancing all these elements, **I thought it was the right time to invest some time and savings into developing new skills while working on projects that make me happy and meeting like-minded people online**.
 
 ## What are my key milestones?
-I decided to **build a portfolio of small bets** as recommended by [Daniel Vassallo](https://twitter.com/dvassallo). Hopefully, some of them will succeed, others will fail. Here's what I decided to focus my energies on for the next few months:
+I decided to **build a portfolio of small bets** as recommended by [Daniel Vassallo](https://twitter.com/dvassallo). Hopefully, some of them will succeed, others will fail. Here's what I decided to focus my energies on for the next three months:
 
 ### Gems
-My first bet is a startup idea to pursue my vision of [extending human cognition with AI](https://gemsnotes.app/blog/augmented-cognition). My goal is to reach Problem/Solution Fit by the end of June.
+It is a startup idea to pursue my vision of [extending (not replacing) human cognition with AI](https://gemsnotes.app/blog/augmented-cognition). With this global online migration comes new opportunities but also new challenges. There is a 24/7 [battle for our attention](https://gemsnotes.app/blog/attention-economy) and an overproduction of content. The ability to filter out the noise and process only what really matters is critical to saving time and mental energies. I have played around with this idea for a while, but now my goal is to achieve Problem/Solution Fit by the end of July. That is, finding 30 potential customers according to my current [traction roadmap](https://www.notion.so/Traction-roadmap-78246e6afe6b4880aafdd797c989d929).
 
 ### 90-day startup
-This is an [online course](https://leanstack.com/training/90-day-startup) led by Ash Maurya, the inventor of the Lean Canvas. I am part of a team and in 3 months we will learn how to take our idea from concept to Problem/Solution Fit. 
+In all honesty, my first bet seems ambitious to me. This is why I enrolled on an [online course](https://leanstack.com/training/90-day-startup) led by Ash Maurya, the inventor of the [Lean Canvas](https://www.notion.so/Lean-Canvas-3b92aae4d47b4241942d7b39722976c9). I am part of a team and in 3 months we will learn how to take our idea from concept to Problem/Solution Fit. I will transfer strategies and tactics learned to Gems in parallel. It may sound overwhelming but I believe in the [Pareto principle](https://en.wikipedia.org/wiki/Pareto_principle) which states that 80% of outcomes (outputs) come from 20% of causes (inputs), so you better prioritize the 20% of factors that will produce the best results. I am committed to work smarter on two ideas rather than harder on just one. 
 
-I've spent almost a decade learning how to build solutions. Unfortunately, that's not enough to make products that people buy and use. I believe that learning how to find problems worth solving (in any domain) quickly and safely is what separates me from my dreams. That's the promise of the course and I see it as a lifetime investment.
-
-I will work with my team and transfer in real time the same concepts on Gems. It may sound overwhelming. My bet here is to work smarter on two ideas rather than harder on just one. 
-
-### Stock market investments
-My third and last bet is something I have never done before. I don't know anything about stock market investments but I want to test if it is a viable way to mitigate the lack of monthly income a little bit. I cannot expect big results, I am more curious to learn how it works and do some little experiments for now.
+[Here](https://www.notion.so/90-day-startup-68959c7a8d434f5f9ed94420ad2e297d) you can find my public notes from the course. I'll also share periodic updates on [Twitter](https://twitter.com/Ittaboba), [LinkedIn](https://www.linkedin.com/in/lorenzo-bernaschina-669a08b9/), and this same blog. At the end of the three months, I will review risks and outcomes to decide whether to pivot, persevere, or pause.
 
 ## Can I pull this off?
-It's quite clear that I am missing some pieces to complete the puzzle. However, **if I had waited to feel ready, I probably would never have started**. Plus, I'm much more comfortable learning by doing. I am building systems, mental models, and relationships to make as few mistakes as possible:
-- I constantly engage in online communities to stay accountable and keep my thinking always open to fresh ideas from diverse people.
-- I designed a [spreadsheet](/article/5feb11fd7d0c7c0ba5620f4b) for continuous planning and retrospection that I update daily. It helps me set my goals and priorities, make reasonable estimates of activities' complexity to achieve them, monitor progress, and evaluate results.
-- I decided to learn and build in public to share wins and failures with people on the same path.
+**If I had waited to feel ready, I probably would never have started. Speed of learning is key**. I am building relationships, systems, and mental frameworks to be as effective as possible:
+- I joined virtual accelerators to stay accountable, get feedback, and keep my thinking always open to fresh ideas from diverse people.
+- I designed a [spreadsheet](/article/5feb11fd7d0c7c0ba5620f4b) for continuous planning and retrospection that I update daily. It helps me set goals and priorities, make reasonable estimates of activities, monitor progress, and evaluate results.
+- I keep learning new models such as the "[Continuous Innovation Framework](https://www.notion.so/The-Continuous-Innovation-Framework-d2769cc56322405fb0ffce4191292cf0)" or the "[Creativity Staircase](https://www.notion.so/Creativity-staircase-17241b339247484aa911183b86f712dc)" to make every decision and workflow as measurable and predictable as possible. [Grace Hopper](https://en.wikipedia.org/wiki/Grace_Hopper) once said: *"One accurate measurement is worth a thousand expert opinions"*.
+
+**My small bets are more investments than gambles**. I've spent almost a decade learning how to build solutions. Unfortunately, a lot more is needed to make products that people buy and use. Understanding how to find *problems worth solving* and *get early traction* for an idea are the biggest constraints that separate me from making a living doing what I love. So my primary focus is to remove these constraints. The projects I'm working on may fail, but the developed mindset will stay.
