--- a/content/blog/social_learning_twitter/index.mdx
+++ b/content/blog/social_learning_twitter/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: "How I am using Twitter as a social learning platform"
 slug: 5f3bfc27fe69624f95ab15d8
-type: blog
+type: "blog"
 date: "2020-09-01"
 author: Lorenzo Bernaschina
-description: test
+description: Theories and practices to spend time on good content and find the right people and ideas on Twitter.
 banner: ./banner.jpg
 ---
 
