--- a/content/projects/dots/index.mdx
+++ b/content/projects/dots/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Dots - The color theory game"
 slug: 5e598c062709b8142b01147d
-type: project
-date: "2020-02-21"
+type: "project"
+date: "2020-04-19"
 author: Lorenzo Bernaschina
 description: Dots is a game based on color theory. The player must mix some of the 9 colored dots to get the background color.
 banner: ./banner.jpg
