--- a/content/projects/lake_como_app/index.mdx
+++ b/content/projects/lake_como_app/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Lake Como App - Experience the sense of place"
 slug: 5e28bc742709b8142b01147a
-type: project
-date: "2020-02-08"
+type: "project"
+date: "2020-04-02"
 author: Lorenzo Bernaschina
 description: Lake Como App is an iOS app aimed to show the highlights of Como, my hometown, founded by Julius Caesar in 59 b.C.
 banner: ./LakeComoApp.jpg
