--- a/content/projects/shapes/index.mdx
+++ b/content/projects/shapes/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Shapes - Drawing with objects"
 slug: 5e2f57472709b8142b01147b
-type: project
-date: "2020-02-15"
+type: "project"
+date: "2020-04-10"
 author: Lorenzo Bernaschina
 description: Shapes is a drawing game with a simple rule. You have to use only rectangles, triangles, and circles to make your compositions. 
 banner: ./banner.jpg
