--- a/content/projects/volta_pagina/index.mdx
+++ b/content/projects/volta_pagina/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Volta Pagina - In the footsteps of Alessandro Volta"
 slug: 5e20c38b2709b8142b011477
-type: project
-date: "2020-02-01"
+type: "project"
+date: "2020-03-26"
 author: Lorenzo Bernaschina
 description: Volta Pagina was an iOS app to learn about Alessandro Volta's life and studies. He was a physicist from Como and he is famous for inventing the battery.
 banner: ./VoltaPagina.jpg
