Old articles updated

--- a/content/about/index.mdx
+++ b/content/about/index.mdx
@@ -12,7 +12,7 @@ I am from Lake Como, Italy.<br/> I am passionate about sport and technology and 
 
 I spent my childhood and adolescence dreaming to go to the Olympics in track and field. I was 5, seating on the floor in front of the TV watching the Sydney 2000 Olympic Games. I felt inspired by the athletes’ performances and the De Coubertin’s values, so I asked my parents to take me to a red track.
 
-Ten years later, at 15, I got my first national title in triple jump. But after a few more races I had a bad injury that took me years to heal. I was competing for the regional title when my ankle gave away during a jump. I finished second. Still the guy who won was stronger than me and today he is one of the most promising and talented athletes of the Italia Team. Since then I started a long rehabilitation process facing some complications along the way.
+Ten years later, at 15, I got my first national title in triple jump. But after a few more races I had a bad injury that took me years to heal. I was competing for the regional title when my ankle gave away during a jump. I finished second. Still the guy who won was stronger than me and today he is the [Olympic champion](https://en.wikipedia.org/wiki/Marcell_Jacobs) of 100m and 4x100m relay. Since then I started a long rehabilitation process facing some complications along the way.
 
 While recovering my parents gave me an iMac for my sixteenth birthday. At first, I used it to analyze my jumps and to edit sports videos. Then, a few months later, a hobbyist magazine published a course to make iPhone apps that caught my attention. Since it was too difficult for a beginner, for Christmas I asked for books to learn to code. So I began my journey in computer science as a self-taught. I spent nights learning the basics and practicing in C language before coming back to the course. I published my [first app](/article/5e20c38b2709b8142b011477) on the App Store a year later, at 17.
 
