--- a/content/blog/2020_annual_review/index.mdx
+++ b/content/blog/2020_annual_review/index.mdx
@@ -18,29 +18,19 @@ Here we are at the end of this absurd year. First and foremost, I am grateful th
 **The Internet is far more powerful and groundbreaking than I used to think**. At some point I felt a radical change in my [way of thinking](/article/5f403343fe69624f95ab15d9) and the need to design a mindful space for myself in such a chaotic and collective environment. This resulted in a much more profitable use of digital tools. The fact that I realized it right at the end of my studies sounds like a huge missed chance and an exciting prospect at the same time.
 
 ## Things to celebrate
-As I previously said, I was lucky enough to achieve the major goals of the year and to make interesting discoveries along the way. I finished my Master's in machine learning & AI with a thesis on automatic text summarization of medical papers. For the first time, I started using social media in a [way](/article/5f3bfc27fe69624f95ab15d8) that replaced stress and anxiety with new friendships and insights. This brought me to take two fundamental online courses in late 2020: 
+As I previously said, I was lucky enough to achieve the major goals of the year and to make interesting discoveries along the way. I finished my Master's in machine learning & AI with a thesis on automatic text summarization of medical papers. 
+
+For the first time, I started using social media in a [way](/article/5f3bfc27fe69624f95ab15d8) that replaced stress and anxiety with new friendships and insights. This brought me to take two fundamental online courses in late 2020: 
 1. *“From collectors to creators”* by [Ness Labs](https://nesslabs.com/) gave me the right workflows and confidence to become a better knowledge worker in 2021 along with an amazing community of like-minded people to talk to. 
 2. *“Foundations & Ideation”* by [Lean Stack](https://leanstack.com/) gave me the right frameworks and mindset to effectively validate and build my ideas in the future.
 
-After years of hesitation, I have finally published this blog itself and overcame the fear of writing, learning, and building in public despite I haven't managed to create and share content consistently. 
+After years of hesitation, I have finally published this blog itself and overcame the fear of writing, learning, and building in public. 
 
-Lastly, I laid the foundations for a note-taking tool called [Gems](https://gemsnotes.app/) to support my learning and creative efforts for years to come. In 2021 I want to make it a personal laboratory for myself and others to experiment and put creativity into practice. 
-
-## Things to improve
-I have just mentioned my lack of consistency in creating and delivering content mainly due to the lack of time and effective workflows that I'll make sure to have from now on. 
-
-In 2020 I did an experiment to keep track of every single hour of activity in a spreadsheet. Although I now have some data to make better evaluations for 2021, I have passively collected it without much analysis and retrospective so far. I'll definitely introduce much shorter feedback loops in 2021 and make journaling a habit. 
-
-I must resist the tendency to fill the calendar with new courses and projects whenever I feel there is room for them. This also requires the ability to discern the relevance and complexity of tasks in order to optimize my efforts and have more time to relax, which is as important as any other activity. I updated my spreadsheet accordingly not only to monitor but also to invest my time more intentionally. I wrote a dedicated [article](/article/5feb11fd7d0c7c0ba5620f4b) in case you are interested in setting up yours.
+Lastly, I laid the foundations for a note-taking tool called [Gems](https://gemsnotes.app/). 
 
 ## Memories
 It'll be hard to forget more than 60 days locked at home with the silence around broken only by the ambulance sirens and the sound of mourning bells. I basically spent the year in my bedroom studying and working. Before the beginning of the pandemic, some of my former classmates from primary school had the brilliant idea to have dinner together 15 years later. After that, I only went 4 days to Prague in July to celebrate a friend's graduation in medicine and I met a few others just once or twice. Although they were rather short and sporadic experiences, I am grateful for their emotional intensity. The past 12 months have shown me that remote working is possible and it also has some advantages but nothing replaces the serendipity and alchemy of in-person meetings that make memories great. 
 
-## Goals
-I prefer not to make public commitments in advance for my boldest goals of the year but I can anticipate that I want to **write more words than code**. After almost a decade spent to become an *indie hacker*, I want to invest more in developing the skills required to become an *indie thinker* as well. I won't measure my progress by the number of written words, published articles, lines of code, etc. Instead, I just want to keep at least a **3:1 ratio of time invested** in writing versus coding. Ultimately, time is our scarcest and most valuable resource and I can't make any stronger commitment than allocating it to something I truly believe in.
-
 In these uncertain times, I wish you to find the courage to make choices that leave you no regrets. In any crisis, following your heart and intuition may seem the last thing to do but I genuinely believe in the opposite. 
 
 Have a fearless 2021 🎉
-
-*Special thanks to [Anne-Laure](https://twitter.com/anthilemoon) who inspired me once again with her “Year in Review” workshop on Ness Labs.*
