--- a/content/blog/quit_my_job/index.mdx
+++ b/content/blog/quit_my_job/index.mdx
@@ -39,15 +39,15 @@ There are internal and external risks.
 Balancing all these elements, **I thought it was the right time to invest some time and savings into developing new skills while working on projects that make me happy and meeting like-minded people online**.
 
 ## What are my key milestones?
-I decided to **build a portfolio of small bets** as recommended by [Daniel Vassallo](https://twitter.com/dvassallo). Hopefully, some of them will succeed, others will fail. Here's what I decided to focus my energies on for the next three months:
+I have decided to place a couple of bets for the next few months:
 
 ### Gems
-It is a startup idea to pursue my vision of [extending (not replacing) human cognition with AI](https://gemsnotes.app/blog/augmented-cognition). With this global online migration comes new opportunities but also new challenges. There is a 24/7 [battle for our attention](https://gemsnotes.app/blog/attention-economy) and an overproduction of content. The ability to filter out the noise and process only what really matters is critical to saving time and mental energies. I have played around with this idea for a while, but now my goal is to achieve Problem/Solution Fit by the end of July. That is, finding 30 potential customers according to my current [traction roadmap](https://www.notion.so/Traction-roadmap-78246e6afe6b4880aafdd797c989d929).
+It is a startup idea to pursue my vision of [extending (not replacing) human cognition with AI](https://gemsnotes.app/why). With this global online migration comes new opportunities but also new challenges. There is a 24/7 [battle for our attention](https://gemsnotes.app/blog/attention-economy) and an overproduction of content. The ability to filter out the noise and process only what really matters is critical to saving time and mental energies. I have played around with this idea for a while, but now my goal is to achieve Problem/Solution Fit by the end of July. That is, finding 10 potential customers according to my current [traction roadmap](https://www.notion.so/Traction-roadmap-78246e6afe6b4880aafdd797c989d929).
 
 ### 90-day startup
 In all honesty, my first bet seems ambitious to me. This is why I enrolled on an [online course](https://leanstack.com/training/90-day-startup) led by Ash Maurya, the inventor of the [Lean Canvas](https://www.notion.so/Lean-Canvas-3b92aae4d47b4241942d7b39722976c9). I am part of a team and in 3 months we will learn how to take our idea from concept to Problem/Solution Fit. I will transfer strategies and tactics learned to Gems in parallel. It may sound overwhelming but I believe in the [Pareto principle](https://en.wikipedia.org/wiki/Pareto_principle) which states that 80% of outcomes (outputs) come from 20% of causes (inputs), so you better prioritize the 20% of factors that will produce the best results. I am committed to work smarter on two ideas rather than harder on just one. 
 
-[Here](https://www.notion.so/90-day-startup-68959c7a8d434f5f9ed94420ad2e297d) you can find my public notes from the course. I'll also share periodic updates on [Twitter](https://twitter.com/Ittaboba), [LinkedIn](https://www.linkedin.com/in/lorenzo-bernaschina-669a08b9/), and this same blog. At the end of the three months, I will review risks and outcomes to decide whether to pivot, persevere, or pause.
+[Here](https://www.notion.so/90-day-startup-68959c7a8d434f5f9ed94420ad2e297d) you can find my public notes from the course. At the end of the three months, I will review risks and outcomes to decide whether to pivot, persevere, or pause.
 
 ## Can I pull this off?
 **If I had waited to feel ready, I probably would never have started. Speed of learning is key**. I am building relationships, systems, and mental frameworks to be as effective as possible:
