--- a/content/blog/lego_thoughts/index.mdx
+++ b/content/blog/lego_thoughts/index.mdx
@@ -4,7 +4,7 @@ slug: 5f403343fe69624f95ab15d9
 type: "blog"
 date: "2020-09-25"
 author: Lorenzo Bernaschina
-description: I have found a personal knowledge management system that makes me more creative without sacrificing my mental health.
+description: I have found a personal knowledge management system that makes me more productive and creative.
 banner: ./banner.jpg
 ---
 This year my life unexpectedly moved almost 100% online. Both my job and classes have been fully remote for months. So my working and learning processes have changed. In this article, I will cover the latter.
