Gems posts migration + covers updated

--- a/content/blog/2021_annual_review/index.mdx
+++ b/content/blog/2021_annual_review/index.mdx
@@ -15,9 +15,9 @@ Since I have started as a self-taught developer at 16, I have spent almost a dec
 It would actually take a whole book to explain all the things I have learned in 2021. And I would have liked to write a few posts if I had the time. My apologies, it has been a very busy year. I will catch up on this at some point. In the meantime, here are some highlights:
 
 ### SEO blogging 
-In the first quarter of the year, I focused on learning the basics of SEO. I joined this [great community](https://bloggingfordevs.com) managed by [Monica](https://twitter.com/monicalent) who taught me both [technical SEO and how to structure a content plan](https://golden-workshop-ecc.notion.site/SEO-7099bc7610a649beb385b712a74e5e77). I have applied the learnings on this same website and on the [blog section of Gems](https://gemsnotes.app/blog/). In this second case, since it’s blogging for business, I followed this [great course](https://ahrefs.com/academy/blogging-for-business) by Ahrefs too. Here you can find my [main takeaways](https://golden-workshop-ecc.notion.site/Blogging-for-business-a4cb0d9b1c27438bafaf2fbfd8b2bd1a). 
+In the first quarter of the year, I focused on learning the basics of SEO. I joined this [great community](https://bloggingfordevs.com) managed by [Monica](https://twitter.com/monicalent) who taught me both [technical SEO and how to structure a content plan](https://golden-workshop-ecc.notion.site/SEO-7099bc7610a649beb385b712a74e5e77). I have applied the learnings on this same website. 
 
-If you have a business, SEO blogging is very powerful. Once you rank at the top on Google search results, you constantly have the unfair advantage of being the very first one to give a solution to your prospects when they need it most. If you [understand your customers](https://golden-workshop-ecc.notion.site/When-is-the-worst-time-of-year-to-run-ads-for-new-homes-8d13092ab5d44975b4bd4f819cc653ac) well enough, you can basically cut off your competition for free. 
+I followed this [great course](https://ahrefs.com/academy/blogging-for-business) by Ahrefs too. Here you can find my [main takeaways](https://golden-workshop-ecc.notion.site/Blogging-for-business-a4cb0d9b1c27438bafaf2fbfd8b2bd1a). If you have a business, SEO blogging is very powerful. Once you rank at the top on Google search results, you constantly have the unfair advantage of being the very first one to give a solution to your prospects when they need it most. If you [understand your customers](https://golden-workshop-ecc.notion.site/When-is-the-worst-time-of-year-to-run-ads-for-new-homes-8d13092ab5d44975b4bd4f819cc653ac) well enough, you can basically cut off your competition for free. 
 
 Of course, this is much easier said than done. You have to publish consistently. You have to find keywords that you can compete for. But more importantly, you have to build backlinks to your website to increase Domain Authority which is what really matters to search engines. It takes months to be ranked by Google. And finally, even assuming you have all these things in place, your content needs to be original, provide value to visitors, and be well connected with what you offer to get your chance to convert them. Otherwise, you just get a lot of traffic that slows down your page. 
 
