--- a/content/blog/lego_thoughts/index.mdx
+++ b/content/blog/lego_thoughts/index.mdx
@@ -38,7 +38,7 @@ I think that networked knowledge brings with it completely new challenges. **The
 
 After some research, [social networks](/article/5f3bfc27fe69624f95ab15d8) led me to the figure of Niklas Luhmann. He was one of the most important social theorists of the 20th century also known for being very prolific with his publications. The secret was in the way he took and organized his notes. Luhmann's note-taking system was based on two simple principles that are curiously central to AI and computer programming as well: modularity and links.
 
-In his system called [Zettelkasten](https://gemsnotes.app/blog/zettelkasten), **ideas become like building blocks**. They can be connected in endless ways to generate multiple flows of thoughts, find contradictions, and see new patterns. These building blocks are called **Indexes** and **Notes**. Indexes, typically labeled with a keyword, are the entry points to a **knowledge base** made of Notes linked together. There are no hierarchies nor notebooks. Each Index starts a flow. Each Note refers to a single concept and can be part of multiple flows. 
+In his system called [Zettelkasten](/article/zettelkasten), **ideas become like building blocks**. They can be connected in endless ways to generate multiple flows of thoughts, find contradictions, and see new patterns. These building blocks are called **Indexes** and **Notes**. Indexes, typically labeled with a keyword, are the entry points to a **knowledge base** made of Notes linked together. There are no hierarchies nor notebooks. Each Index starts a flow. Each Note refers to a single concept and can be part of multiple flows. 
 
 The knowledge base is not intended to be an archive, rather an artificial extension of the mind. This is a critical difference compared to traditional systems. For almost 20 years, my question has been: *“Where do I put this information?”*. Now it is *“How could this information enrich my existing flows?”*. **It's a shift from topic-based to concept-based thinking**. To make notes reusable in multiple flows, they need to express concepts instead of topics. 
 
