--- a/content/blog/quit_my_job/index.mdx
+++ b/content/blog/quit_my_job/index.mdx
@@ -42,7 +42,7 @@ Balancing all these elements, **I thought it was the right time to invest some t
 I have decided to place a couple of bets for the next few months:
 
 ### Gems
-It is a startup idea to pursue my vision of [extending (not replacing) human cognition with AI](https://gemsnotes.app/why). With this global online migration comes new opportunities but also new challenges. There is a 24/7 [battle for our attention](https://gemsnotes.app/blog/attention-economy) and an overproduction of content. The ability to filter out the noise and process only what really matters is critical to saving time and mental energies. I have played around with this idea for a while, but now my goal is to achieve Problem/Solution Fit by the end of July. That is, finding 10 potential customers according to my current [traction roadmap](https://www.notion.so/Traction-roadmap-78246e6afe6b4880aafdd797c989d929).
+It is a startup idea to pursue my vision of [extending (not replacing) human cognition with AI](/article/augmented-cognition). With this global online migration comes new opportunities but also new challenges. There is a 24/7 [battle for our attention](/article/attention-economy) and an overproduction of content. The ability to filter out the noise and process only what really matters is critical to saving time and mental energies. I have played around with this idea for a while, but now my goal is to achieve Problem/Solution Fit by the end of July. That is, finding 10 potential customers according to my current [traction roadmap](https://www.notion.so/Traction-roadmap-78246e6afe6b4880aafdd797c989d929).
 
 ### 90-day startup
 In all honesty, my first bet seems ambitious to me. This is why I enrolled on an [online course](https://leanstack.com/training/90-day-startup) led by Ash Maurya, the inventor of the [Lean Canvas](https://www.notion.so/Lean-Canvas-3b92aae4d47b4241942d7b39722976c9). I am part of a team and in 3 months we will learn how to take our idea from concept to Problem/Solution Fit. I will transfer strategies and tactics learned to Gems in parallel. It may sound overwhelming but I believe in the [Pareto principle](https://en.wikipedia.org/wiki/Pareto_principle) which states that 80% of outcomes (outputs) come from 20% of causes (inputs), so you better prioritize the 20% of factors that will produce the best results. I am committed to work smarter on two ideas rather than harder on just one. 
